# pjsua2-python

./: README.md  build_pjproject_windows.ps1  pyproject.toml  setup.cfg
.github/workflows/: build-wheels.yml
scripts/: build_pjproject_linux.sh  build_pjproject_windows.ps1
