[build-system]
requires = ["setuptools", "wheel", "cibuildwheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pjsua2-python"
version = "2.17.0"
description = "Python bindings for PJSUA2 (PJSIP 2.17)"
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "BSD-2-Clause" }

[tool.cibuildwheel]
build = "cp310-*"

# Linux: x86_64 + ARM64
archs = ["x86_64", "aarch64"]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

# Windows: AMD64
archs-windows = ["AMD64"]
