[metadata]
name = pjsua2-python
version = 2.17.0
description = Python bindings for PJSUA2 (PJSIP 2.17)
author = Your Name
license = BSD-2-Clause

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
include_package_data = True

[options.package_data]
pjsua2_python =
    *.so
    *.pyd
